chapter-5/Auditing-logging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
  labels:
    istio-injection: enabled
