chapter-5/Auditing-logging/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: audit-policy
  namespace: default
spec:
  action: AUDIT
  rules:
  - from:
    - source:
        notNamespaces: ["trusted-namespace"]
    to:
    - operation:
        methods: ["POST", "PUT", "DELETE"]
